added time based watchlist

--- a/item/templates/watchlist/watchlist_create.html
+++ b/item/templates/watchlist/watchlist_create.html
@@ -1,16 +1,19 @@
-<form action="{% url 'watchlist_create' %}?stock_pk={{ request.GET.stock_pk }}"
-      method="post">
+<form action="{% url 'watchlist_create' %}?stock_pk={{ request.GET.stock_pk }}" method="post">
     <div class="modal-header">
         <h5 class="modal-title" id="crudModalLabel">Add this stock to the watch list</h5>
-        <button type="button"
-                class="btn-close"
-                data-bs-dismiss="modal"
-                aria-label="Close"></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
     </div>
     <div class="modal-body">
         {% csrf_token %}
-        <label for="id_threshold" class="form-label">Please enter a stock warning threshold:</label>
-        <div class="mb-3">{{ form.threshold }}</div>
+        Please enter a stock warning threshold value:
+        <ul>
+            <li><i>Unit Based:</i> The number of <b>units</b> as threshold</li>
+            <li><i>Time Based:</i> The number of <b>days</b> from stock delivery</li>
+        </ul>
+        <div class="row">
+            <div class="col-8 mb-3">{{ form.threshold }}</div>
+            <div class="col-4 mb-3">{{ form.threshold_type }}</div>
+        </div>
         <input type="hidden" name="next" value="{{ request.GET.next }}">
         <div class="text-end">
             <button class="btn btn-sm btn-success">Submit</button>
