change the decimal place for stockentry and usage to 2

--- a/item/templates/usage/usage_htmx_input.html
+++ b/item/templates/usage/usage_htmx_input.html
@@ -1,7 +1,7 @@
 <form hx-target="this">
   {% csrf_token %}
   <div class="d-flex justify-content-center align-items-center">
-    <input type="number"
+    <input type="float"
            name="used_quantity"
            placeholder="used..."
            class="w-50 text-end"
