--- a/templates/partials/pagination_simple.html
+++ b/templates/partials/pagination_simple.html
@@ -1,47 +1,73 @@
-{% if page_obj.paginator.num_pages > 1 %}
-  <div class="d-flex justify-content-end px-3">
-    <ul class="pagination">
-      {% if page_obj.has_previous %}
-        <li class="page-item">
-          <a class="page-link"
-             href="?{% for key, value in request.GET.items %}{{ key }}={{ value }}&{% endfor %}page={{ page_obj.previous_page_number }}"
-             aria-label="Previous">
-            <span aria-hidden="true"><i class="bi bi-caret-left"></i></span>
-          </a>
-        </li>
-      {% else %}
-        <li class="page-item disabled">
-          <a class="page-link" href="#" tabindex="-1" aria-disabled="true">
-            <span aria-hidden="true"><i class="bi bi-caret-left"></i></span>
-          </a>
-        </li>
-      {% endif %}
-      {% for i in page_obj.paginator.page_range %}
-        {% if page_obj.number == i %}
-          <li class="page-item active">
-            <a class="page-link" href="#">{{ i }}</a>
-          </li>
-        {% elif i > page_obj.number|add:"-3" and i < page_obj.number|add:"3" %}
+<div class="row pt-2">
+  <div class="col d-flex justify-content-end">
+    <nav>
+      <ul class="pagination pagination-sm">
+        {# PREVIOUS #}
+        {% if page_obj.has_previous %}
           <li class="page-item">
-            <a class="page-link" href="?{% for key, value in request.GET.items %}{{ key }}={{ value }}&{% endfor %}page={{ i }}">{{ i }}</a>
+            <a class="page-link"
+               href="?{% for key, value in request.GET.items %}{% if key != 'page' %}{{ key }}={{ value }}&{% endif %}{% endfor %}page={{ page_obj.previous_page_number }}">
+              <i class="fal fa-caret-left"></i>
+            </a>
+          </li>
+        {% else %}
+          <li class="page-item disabled">
+            <span class="page-link"><i class="fal fa-caret-left"></i></span>
           </li>
         {% endif %}
-      {% endfor %}
-      {% if page_obj.has_next %}
-        <li class="page-item">
-          <a class="page-link"
-             href="?{% for key, value in request.GET.items %}{{ key }}={{ value }}&{% endfor %}page={{ page_obj.next_page_number }}"
-             aria-label="Next">
-            <span aria-hidden="true"><i class="bi bi-caret-right"></i></span>
-          </a>
-        </li>
-      {% else %}
-        <li class="page-item disabled">
-          <a class="page-link" href="#" tabindex="-1" aria-disabled="true">
-            <span aria-hidden="true"><i class="bi bi-caret-right"></i></span>
-          </a>
-        </li>
-      {% endif %}
-    </ul>
+        {# FIRST PAGE #}
+        {% if page_obj.number > 3 %}
+          <li class="page-item">
+            <a class="page-link"
+               href="?{% for key, value in request.GET.items %}{% if key != 'page' %}{{ key }}={{ value }}&{% endif %}{% endfor %}page=1">1</a>
+          </li>
+          {% if page_obj.number > 4 %}
+            <li class="page-item disabled">
+              <span class="page-link">...</span>
+            </li>
+          {% endif %}
+        {% endif %}
+        {# PAGE NUMBERS AROUND CURRENT PAGE #}
+        {% for i in page_obj.paginator.page_range %}
+          {% if i >= page_obj.number|add:-2 and i <= page_obj.number|add:2 %}
+            {% if page_obj.number == i %}
+              <li class="page-item active">
+                <span class="page-link">{{ i }}</span>
+              </li>
+            {% else %}
+              <li class="page-item">
+                <a class="page-link"
+                   href="?{% for key, value in request.GET.items %}{% if key != 'page' %}{{ key }}={{ value }}&{% endif %}{% endfor %}page={{ i }}">{{ i }}</a>
+              </li>
+            {% endif %}
+          {% endif %}
+        {% endfor %}
+        {# LAST PAGE #}
+        {% if page_obj.number < page_obj.paginator.num_pages|add:-2 %}
+          {% if page_obj.number < page_obj.paginator.num_pages|add:-3 %}
+            <li class="page-item disabled">
+              <span class="page-link">...</span>
+            </li>
+          {% endif %}
+          <li class="page-item">
+            <a class="page-link"
+               href="?{% for key, value in request.GET.items %}{% if key != 'page' %}{{ key }}={{ value }}&{% endif %}{% endfor %}page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
+          </li>
+        {% endif %}
+        {# NEXT #}
+        {% if page_obj.has_next %}
+          <li class="page-item">
+            <a class="page-link"
+               href="?{% for key, value in request.GET.items %}{% if key != 'page' %}{{ key }}={{ value }}&{% endif %}{% endfor %}page={{ page_obj.next_page_number }}">
+              <i class="fal fa-caret-right"></i>
+            </a>
+          </li>
+        {% else %}
+          <li class="page-item disabled">
+            <span class="page-link"><i class="fal fa-caret-right"></i></span>
+          </li>
+        {% endif %}
+      </ul>
+    </nav>
   </div>
-{% endif %}
+</div>
