--- a/item/templates/stock/stock_list.html
+++ b/item/templates/stock/stock_list.html
@@ -47,9 +47,7 @@
                  hx-swap="innerHTML"
                  class="px-1"
                  title="Print QR Code Stickers"><i class="bi bi-qr-code"></i></a>
-              <a href="{% url 'stock_update' stock.pk %}"
-                 title="Edit stock information"
-                 class="px-1"><i class="bi bi-pencil-square"></i></a>
+              <a href="{% url 'stock_update' stock.pk %}" title="Edit stock information" class="px-1"><i class="bi bi-pencil-square"></i></a>
               <a hx-get="{% url 'stock_delete' stock.pk %}"
                  hx-trigger="click"
                  hx-target="#crudModal .modal-content"
@@ -105,15 +103,18 @@
             {% for entry in stock.entries.all %}
               <div class="row text-center align-items-center">
                 <div class="col-2 col-lg-1">
-                  <a href="#{{ entry.pk }}"
-                     title="{{ stock.lot_number }}-{{ entry.pk }}-{{ entry.ordinal_number }}">
+                  <a href="#{{ entry.pk }}" title="{{ stock.lot_number }}-{{ entry.pk }}-{{ entry.ordinal_number }}">
                     <span class="icon-with-text">
                       <i class="bi bi-box2-fill icon-with-text-icon {% if entry.remaining_quantity == 0 %}text-gray-300{% else %}{% stock_entry_colour entry.ordinal_number %}-text-color{% endif %}"></i>
                       <span class="icon-with-text-low">{{ entry.ordinal_number }}</span>
                     </span>
                   </a>
                 </div>
-                <div class="col-4 col-lg-2 small text-center">{{ entry.in_use_date|date:"d/m/Y"|default_if_none:"" }}</div>
+                <div class="col-4 col-lg-2 small text-center">
+                  {% if entry.in_use_date %}
+                    <a href="{% url 'usage_list' %}?entry_id={{ entry.pk }}">{{ entry.in_use_date|date:"d/m/Y" }}</a>
+                  {% endif %}
+                </div>
                 <div class="col-6 col-lg-3">
                   {% if entry.remaining_quantity == 0 %}
                     <del>0 {{ entry.remaining_unit }}</del>
@@ -133,8 +134,7 @@
                 </div>
                 <div class="col-auto d-none d-lg-block">
                   <span class="tooltray-container d-none">
-                    <a href="{% url 'stock_entry_update' entry.pk %}"
-                       title="Edit {{ entry.ordinal_number }}"><i class="bi bi-pencil-square"></i></a>
+                    <a href="{% url 'stock_entry_update' entry.pk %}" title="Edit {{ entry.ordinal_number }}"><i class="bi bi-pencil-square"></i></a>
                     <a hx-get="{% url 'stock_entry_delete' entry.pk %}"
                        hx-trigger="click"
                        hx-target="#crudModal .modal-content"
