--- a/static/css/reagentree-1.0.css
+++ b/static/css/reagentree-1.0.css
@@ -14,6 +14,7 @@
   --rt-stock: #ff9000;
   --rt-dark-orange: #dd5030;
   --rt-inhouse: #008080;
+  --rt-notice: #e9681e;
 }
 
 a {
@@ -106,8 +107,7 @@ a:hover {
 
 /* Auto-dismiss alert transition */
 .alert.auto-dismiss {
-  transition: opacity 0.5s ease-out, max-height 0.5s ease-out,
-    padding 0.5s ease-out, margin 0.5s ease-out;
+  transition: opacity 0.5s ease-out, max-height 0.5s ease-out, padding 0.5s ease-out, margin 0.5s ease-out;
   opacity: 1;
   max-height: 60px; /* Adjust based on your alert's typical height */
   overflow: hidden;
@@ -191,6 +191,10 @@ a:hover {
 }
 .inhousestock-text-color {
   color: var(--rt-inhousestock);
+}
+
+notice-text-color {
+  color: var(--rt-notice);
 }
 /* width control */
 
