notice app complete

--- a/notice/templates/notice/notice_list.html
+++ b/notice/templates/notice/notice_list.html
@@ -4,11 +4,13 @@
   Notices
 {% endblock title %}
 {% block panel_title %}
+  <i class="bi bi-megaphone notice-text-color"></i>
   {% if archive_status == "archived" %}
-    <i class="bi bi-megaphone text-secondary"></i> Archived Notices
+    Archived
   {% else %}
-    <i class="bi bi-megaphone text-danger"></i> Active Notices
+    Active
   {% endif %}
+  Notices
   <a href="{% url 'notice_list' %}{% if archive_status != 'archived' %}?archive=archived{% endif %}">
     <i class="bi {% if archive_status == 'archived' %}bi-toggle-on{% else %}bi-toggle-off{% endif %}"></i>
   </a>
@@ -20,24 +22,6 @@
   <div class="container-fluid pt-3">
     <!-- Headers -->
     <div class="row mb-2 d-none d-lg-flex text-muted fw-bold align-items-center">
-      <div class="col-3">
-        {% with current_sort=request.GET.sort_by|default:'message' current_order=request.GET.order|default:'asc' %}
-          {% if current_sort == 'message' and current_order == 'asc' %}
-            <a href="?archive={{ archive_status }}&sort_by=message&order=desc">Message <i class="bi bi-arrow-up"></i></a>
-          {% else %}
-            <a href="?archive={{ archive_status }}&sort_by=message&order=asc">Message <i class="bi bi-arrow-down"></i></a>
-          {% endif %}
-        {% endwith %}
-      </div>
-      <div class="col-2">
-        {% with current_sort=request.GET.sort_by|default:'expiry_date' current_order=request.GET.order|default:'asc' %}
-          {% if current_sort == 'expiry_date' and current_order == 'asc' %}
-            <a href="?archive={{ archive_status }}&sort_by=expiry_date&order=desc">Expiry Date <i class="bi bi-arrow-up"></i></a>
-          {% else %}
-            <a href="?archive={{ archive_status }}&sort_by=expiry_date&order=asc">Expiry Date <i class="bi bi-arrow-down"></i></a>
-          {% endif %}
-        {% endwith %}
-      </div>
       <div class="col-2">
         {% with current_sort=request.GET.sort_by|default:'importance' current_order=request.GET.order|default:'asc' %}
           {% if current_sort == 'importance' and current_order == 'asc' %}
@@ -47,7 +31,25 @@
           {% endif %}
         {% endwith %}
       </div>
-      <div class="col-2">
+      <div class="col-6">
+        {% with current_sort=request.GET.sort_by|default:'message' current_order=request.GET.order|default:'asc' %}
+          {% if current_sort == 'message' and current_order == 'asc' %}
+            <a href="?archive={{ archive_status }}&sort_by=message&order=desc">Message <i class="bi bi-arrow-up"></i></a>
+          {% else %}
+            <a href="?archive={{ archive_status }}&sort_by=message&order=asc">Message <i class="bi bi-arrow-down"></i></a>
+          {% endif %}
+        {% endwith %}
+      </div>
+      <div class="col-1">
+        {% with current_sort=request.GET.sort_by|default:'expiry_date' current_order=request.GET.order|default:'asc' %}
+          {% if current_sort == 'expiry_date' and current_order == 'asc' %}
+            <a href="?archive={{ archive_status }}&sort_by=expiry_date&order=desc">Expiry Date <i class="bi bi-arrow-up"></i></a>
+          {% else %}
+            <a href="?archive={{ archive_status }}&sort_by=expiry_date&order=asc">Expiry Date <i class="bi bi-arrow-down"></i></a>
+          {% endif %}
+        {% endwith %}
+      </div>
+      <div class="col-1">
         {% with current_sort=request.GET.sort_by|default:'created_by' current_order=request.GET.order|default:'asc' %}
           {% if current_sort == 'created_by' and current_order == 'asc' %}
             <a href="?archive={{ archive_status }}&sort_by=created_by&order=desc">Created By <i class="bi bi-arrow-up"></i></a>
@@ -56,7 +58,7 @@
           {% endif %}
         {% endwith %}
       </div>
-      <div class="col-2">
+      <div class="col-1">
         {% with current_sort=request.GET.sort_by|default:'created_at' current_order=request.GET.order|default:'desc' %}
           {% if current_sort == 'created_at' and current_order == 'asc' %}
             <a href="?archive={{ archive_status }}&sort_by=created_at&order=desc">Created At <i class="bi bi-arrow-up"></i></a>
@@ -70,33 +72,35 @@
     <!-- Rows for Each Notice -->
     {% for notice in notices %}
       <div class="row py-1 border-top align-items-center {% if forloop.counter0|divisibleby:2 %}bg-light{% else %}bg-white{% endif %}">
-        <!-- Message -->
-        <div class="col-6 col-lg-3 align-middle">
-          <a href="{{ notice.get_absolute_url }}">{{ notice.message|truncatechars:50 }}</a>
-        </div>
-        <!-- Expiry Date -->
-        <div class="col-lg-2 d-none d-lg-block">{{ notice.expiry_date|date:'d/m/Y' }}</div>
         <!-- Importance -->
         <div class="col-lg-2 d-none d-lg-block">
-          <span class="fw-bold {{ notice.get_importance_color }}">{{ notice.get_importance_display }}</span>
+          <span class="fw-bold {{ notice.get_importance_color }}"><i class="bi bi-square-fill"></i> {{ notice.get_importance_display }}</span>
         </div>
+        <!-- Message -->
+        <div class="col-lg-6 col-6 align-middle">
+          <a href="{{ notice.get_absolute_url }}">{{ notice.message|truncatechars:100 }}</a>
+        </div>
+        <!-- Expiry Date -->
+        <div class="col-lg-1 d-none d-lg-block">{{ notice.expiry_date|date:'d/m/Y' }}</div>
         <!-- Created By -->
-        <div class="col-lg-2 d-none d-lg-block">{{ notice.created_by }}</div>
+        <div class="col-lg-1 d-none d-lg-block">{{ notice.created_by }}</div>
         <!-- Created At -->
-        <div class="col-lg-2 d-none d-lg-block">{{ notice.created_at|date:'d/m/Y' }}</div>
+        <div class="col-lg-1 d-none d-lg-block">{{ notice.created_at|date:'d/m/Y' }}</div>
         <!-- Actions -->
         <div class="col-lg-1 d-none d-lg-block text-end">
           <span class="tooltray-container d-none">
-            <a href="{% url 'notice_update' notice.pk %}"><i class="bi bi-pencil-square"></i></a>
+            <a href="{% url 'notice_update' notice.pk %}" title="Edit this notice"><i class="bi bi-pencil-square"></i></a>
             {% if archive_status == "archived" %}
               <a href="#"
                  hx-post="{% url 'notice_archive' notice.pk %}?archive=archived"
                  hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
+                 hx-confirm="Are you sure you want to unarchive this notice?"
                  title="Unarchive this notice"><i class="bi bi-calendar-check"></i></a>
             {% else %}
               <a href="#"
                  hx-post="{% url 'notice_archive' notice.pk %}?archive=active"
                  hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
+                 hx-confirm="Are you sure you want to archive this notice?"
                  title="Archive this notice"><i class="bi bi-calendar-x"></i></a>
             {% endif %}
           </span>
