--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
       {% block footer %}
         <footer class="footer mt-auto p-5">
           <div class="container text-center">
-            <span class="text-muted small">ReagenTree © 2024 - <a href="https://www.oxfordgenes.com" title="Visit OxfordGenes.com">OxfordGenes</a></span>
+            <span class="text-muted small">ReagenTree © 2024-2025 - <a href="https://www.oxfordgenes.com" title="Visit OxfordGenes.com">OxfordGenes</a></span>
           </div>
         </footer>
       {% endblock footer %}
