--- a/notice/templates/notice/notice_detail.html
+++ b/notice/templates/notice/notice_detail.html
@@ -8,7 +8,7 @@
 {% endblock panel_title %}
 {% block panel_actions %}
   <div class="pe-3">
-    <a href="{% url 'notice_update' notice.pk %}" class="btn btn-sm btn-warning">
+    <a href="{% url 'notice_update' notice.pk %}" class="btn btn-sm btn-success">
       <i class="bi bi-pencil-square"></i> <span class="d-none d-sm-inline">Edit</span>
     </a>
   </div>
@@ -50,7 +50,8 @@
     <div class="d-flex justify-content-end">
       <button hx-post="{% url 'notice_archive' notice.pk %}"
               hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
-              class="btn btn-sm btn-danger"><i class="bi bi-calendar-x"></i> Archive</button>
+              hx-confirm="Are you sure you want to archive this notice?"
+              class="btn btn-sm btn-success"><i class="bi bi-calendar-x"></i> Archive</button>
       <a href="{% url 'notice_list' %}" class="btn btn-sm btn-secondary ms-2"><i class="bi bi-arrow-return-left"></i> Back to List</a>
     </div>
   </div>
