minor UI change

--- a/item/templates/watchlist/watchlist_list.html
+++ b/item/templates/watchlist/watchlist_list.html
@@ -39,7 +39,7 @@
              hx-target="#crudModal .modal-content"
              hx-swap="innerHTML"
              data-bs-toggle="modal"
-             data-bs-target="#crudModal"><i class="bi bi-cart-plus"></i></a>
+             data-bs-target="#crudModal">🛒</a>
         </div>
       </div>
     {% endwith %}
