--- a/templates/homepage/restock_notice.html
+++ b/templates/homepage/restock_notice.html
@@ -1,7 +1,7 @@
 <div class="panel panel-frontpage">
   <div class="panel-heading">
     <div class="d-flex align-items-center pe-2">
-      <i class="bi bi-cart-plus-fill pe-2 delivery-text-color"></i>  <b>Please restock</b>
+      🛒 <b>Please restock</b>
     </div>
   </div>
   {% if watchlists %}
