--- a/templates/homepage/validations.html
+++ b/templates/homepage/validations.html
@@ -1,7 +1,7 @@
 <div class="panel panel-frontpage">
   <div class="panel-heading">
     <div class="d-flex justify-content-between pe-2">
-      <span><i class="bi bi-clipboard pe-2 validation-text-color"></i> <b>Pending validations</b></span>
+      <span><i class="bi bi-clipboard validation-text-color"></i> <b>Pending validations</b></span>
       <span class="float-end">
         <a href="{% url 'stock_validation_list' %}"
            title="List of all stocks require validations"
